--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "node-blog",
   "version": "0.0.0",
-  "description": "A simple nodejs powered",
+  "description": "A simple nodejs powered blog",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"No test specified\""
   },
   "author": "",
   "license": "BSD-2-Clause",
